Rename 'Array Assist' to 'Coding Assist' in modal

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <div id="assistModal" class="modal" hidden>
     <div class="backdrop" id="assistBackdrop"></div>
     <div class="dialog">
-      <h3>Array Assist</h3>
+      <h3>Coding Assist</h3>
       <p class="muted" style="margin:6px 0 10px 0;">
         Enter the system's size below. We’ll build the system to meet your requirements.
       </p>
