Refactor output clearing mechanism in rebuild process
Updated output clearing logic to use cloneNode for better performance.

--- a/index.html
+++ b/index.html
@@ -437,8 +437,11 @@
     };
 
         $('#build').onclick = ()=>{
-      // Clear previous output & state before every rebuild
-      outEl.innerHTML = '';
+      // 🔧 Hard clear output window before rebuilding
+      const freshOut = outEl.cloneNode(false); // clone without children
+      outEl.parentNode.replaceChild(freshOut, outEl);
+      outEl = freshOut;                        // update reference for printLines
+
       statsEl.textContent = '—';
       window._lastCSV = undefined;
       window._lastText = undefined;
@@ -451,16 +454,9 @@
       if (arrNorm.length !== tmk.length){ alert('Array length must match TMK length.'); return; }
       if (!/^[MC0]+$/.test(arrNorm)){ alert('Array must contain only M, C, or 0.'); return; }
 
-            // Clear the output window before every rebuild
-      outEl.innerHTML = '';
-      outEl.textContent = ''; // ensures all old nodes are removed
-
       const {lines, csvRows, mkCount, ckTotal, errorCount} = buildCodingTree(tmk, arrNorm);
       printLines(lines);
       statsEl.textContent = `TMK ${tmk.length} Pin · MKs ${mkCount} · CK ${ckTotal} · Errors ${errorCount}`;
-
-
-    
 
       // stash for copy/download
       window._lastCSV = toCSV(csvRows);
