Change outEl declaration from const to let

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     }
 
     // ---------- UI wiring ----------
-    const outEl = $('#out');
+    let outEl = $('#out');
     const statsEl = $('#stats');
 
 
