Update note to indicate multiple runs are allowed
Added clarification that the process can be repeated.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="dialog">
       <h3>Reduce Errors</h3>
       <p class="muted" style="margin:6px 0 12px 0;">
-        <strong>Please Note:</strong> This will change the current TMK. Press <b>Start</b> to continue.
+        <strong>Please Note:</strong> This will change the current TMK. Press <b>Start</b> to continue. You can run this multiple times until satisfied.
       </p>
       <div class="btnbar" style="justify-content:flex-end">
         <button id="reduceCancel">Cancel</button>
