--- a/index.html
+++ b/index.html
@@ -215,6 +215,19 @@
     function oddSet(exclude){ // 1,3,5,7,9 except 'exclude'
       const s=[1,3,5,7,9]; return s.filter(v=>v!==exclude);
     }
+    // Min Variation Rule (MVR): require at least one pair of digits >= 3 apart.
+    // If (max - min) < 3, it violates the rule => error (true).
+    function hasMinVariationError(arr){
+      if (!arr || !arr.length) return true;
+      let min = 9, max = 0;
+      for (let i=0;i<arr.length;i++){
+        const v = arr[i];
+        if (v < min) min = v;
+        if (v > max) max = v;
+      }
+      return (max - min) < 3;
+    }
+
 
     // ---------- Core generation (ported from your Python) ----------
     function buildCodingTree(tmkStr, arrayStr){
@@ -275,14 +288,15 @@
 
 
       let mkCount=0, ckTotal=0, errorCount=0;
-      if (masterPos.length === 0 && changePos.length === 0) {
-        const ckAdj = hasMaxAdjacentCutError(tmk);
+       if (masterPos.length === 0 && changePos.length === 0) {
+        const ckAdj  = hasMaxAdjacentCutError(tmk);
         const ckDeep = hasDeepestFirstCutError(tmk);
-        const ckErrMsg = (ckAdj && ckDeep) ? "MAC & DFC Error"
-                       : ckAdj ? "MAC Error"
-                       : ckDeep ? "DFC Error" : "";
+        const ckMvr  = hasMinVariationError(tmk);
+        const ckErrMsg = [ ckAdj && "MAC Error", ckDeep && "DFC Error", ckMvr && "MVR Error" ]
+                           .filter(Boolean).join(" & ");
         if (ckErrMsg) errorCount++;
         ckTotal = 1;
+
 
         // Match your CK line format (four leading spaces, pad label to 8)
         const ckLabel = 'CK1.1';
@@ -296,15 +310,16 @@
       masterKeys.forEach((mkCuts, i)=>{
         mkCount++;
         const mkLabel = `MK${i+1}`;
-        const mkErrAdj = hasMaxAdjacentCutError(mkCuts);
+        const mkErrAdj  = hasMaxAdjacentCutError(mkCuts);
         const mkErrDeep = hasDeepestFirstCutError(mkCuts);
-        const mkErrMsg = (mkErrAdj && mkErrDeep) ? "MAC & DFC Error"
-                        : mkErrAdj ? "MAC Error"
-                        : mkErrDeep ? "DFC Error" : "";
+        const mkErrMvr  = hasMinVariationError(mkCuts);
+        const mkErrMsg = [ mkErrAdj && "MAC Error", mkErrDeep && "DFC Error", mkErrMvr && "MVR Error" ]
+                           .filter(Boolean).join(" & ");
 
         if (mkErrMsg) errorCount++;
 
         const mkCode = mkCuts.join("");
+
 
         lines.push(`%c${mkLabel} - ${mkCode}${mkErrMsg?("  " + mkErrMsg):""} %c`.trim());
         csvRows.push([mkLabel, mkCode, mkErrMsg]);
@@ -314,14 +329,15 @@
           ckTotal++;
           const ckLabel = `CK${i+1}.${(j+1)}`;
           const ckCode = ckCuts.join("");
-          // CK error carries MK adjacent error OR own adjacent; + own deepest-first
-          const ckAdj = mkErrAdj || hasMaxAdjacentCutError(ckCuts);
+          // CK error carries MK adjacent error OR own adjacent; + own deepest-first + MVR
+          const ckAdj  = mkErrAdj || hasMaxAdjacentCutError(ckCuts);
           const ckDeep = hasDeepestFirstCutError(ckCuts);
-          const ckErrMsg = (ckAdj && ckDeep) ? "MAC & DFC Error"
-                         : ckAdj ? "MAC Error"
-                         : ckDeep ? "DFC Error" : "";
+          const ckMvr  = hasMinVariationError(ckCuts);
+          const ckErrMsg = [ ckAdj && "MAC Error", ckDeep && "DFC Error", ckMvr && "MVR Error" ]
+                             .filter(Boolean).join(" & ");
 
           if (ckErrMsg) errorCount++;
+
 
           lines.push(`    ${ckLabel.padEnd(8)} - ${ckCode}${ckErrMsg?("  " + ckErrMsg):""}`);
           csvRows.push([ckLabel, ckCode, ckErrMsg]);
@@ -359,7 +375,8 @@
 
       function printLines(lines){
         const html = lines.map(line=>{
-            const hasErr = /(?:MAC|DFC)\s*Error/.test(line); // catches "MAC Error", "DFC Error", "MAC & DFC Error"
+            const hasErr = /(?:MAC|DFC|MVR)\s*Error/.test(line); // catches Errors
+
 
             if (line.startsWith('%cMK')) {
                 // MK line with style markers
