Update footer rules for adjacent cut and code variation

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <button id="download">Download CSV</button>
         <span class="hint">MKs in cyan, CKs in white, errors in red.</span>
       </div>
-      <div class="footer">Rules enforced: Maximum Adjacent Cut &gt; 7 (error), Deepest First Cut ≥ 8 (error). Depth Step of Two.</div>
+      <div class="footer">Rules enforced: Maximum Adjacent Cut &gt; 7 (error), Deepest First Cut ≥ 8 (error) and Minimum Code Variation of 3. Depth Step of Two.</div>
     </div>
   </div>
 
